5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4073/executions/1578_1330.log
== SUBMITION (2019-03-20 18:58:44) 
-- CODE:
print("41,67")
-- EXECUTION TIME:
0.182172
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41,67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:59:31) 
-- CODE:
print("41,6666666667")
-- EXECUTION TIME:
0.197839
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41,6666666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:10) 
-- CODE:
round("41,6666666667")
-- EXECUTION TIME:
0.197864
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("41,6666666667")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:12) 
-- CODE:
round("41,6666666667")
-- EXECUTION TIME:
0.150621
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("41,6666666667")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:25) 
-- CODE:
41,6666666667
-- EXECUTION TIME:
0.130395
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:26) 
-- CODE:
41,6666666667
-- EXECUTION TIME:
0.150112
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:26) 
-- CODE:
41,6666666667
-- EXECUTION TIME:
0.138703
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:27) 
-- CODE:
41,6666666667
-- EXECUTION TIME:
0.175902
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:27) 
-- CODE:
41,6666666667
-- EXECUTION TIME:
0.177781
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:52) 
-- CODE:
41,6666666667
-- EXECUTION TIME:
0.153758
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:58) 
-- CODE:
41,6666666667
-- EXECUTION TIME:
0.134257
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:59) 
-- CODE:
41,6666666667
-- EXECUTION TIME:
0.202852
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:01:01) 
-- CODE:
41,6666666667
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:01:04) 
-- CODE:
41,6666666667
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:01:06) 
-- CODE:
41,6666666667
-- EXECUTION TIME:
0.152102
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:01:35) 
-- CODE:
41,6666666667
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:01:36) 
-- CODE:
41,6666666667
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:01:38) 
-- CODE:
41,6666666667
-- EXECUTION TIME:
0.264866
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:01:58) 
-- CODE:
41,6666666667
-- EXECUTION TIME:
0.207528
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:04:19) 
-- CODE:
round("250/6")
print("41,67")
-- EXECUTION TIME:
0.205633
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:04:24) 
-- CODE:
round("250/6")
print("41,67")
-- EXECUTION TIME:
0.134844
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:04:24) 
-- CODE:
round("250/6")
print("41,67")
-- EXECUTION TIME:
0.178311
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:25) 
-- CODE:
round("250/6")
print("41,67")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:04:29) 
-- CODE:
round("250/6")
print("41,67")
-- EXECUTION TIME:
0.14465
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:08:48) 
-- CODE:
round("250/6")
print("41,7")
-- EXECUTION TIME:
0.244948
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:08:50) 
-- CODE:
round("250/6")
print("41,7")
-- EXECUTION TIME:
0.228987
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:08:51) 
-- CODE:
round("250/6")
print("41,7")
-- EXECUTION TIME:
0.172913
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:08:51) 
-- CODE:
round("250/6")
print("41,7")
-- EXECUTION TIME:
0.172449
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:09:18) 
-- CODE:
round("250/6")
print("12.34")
-- EXECUTION TIME:
0.178595
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:09:20) 
-- CODE:
round("250/6")
print("12.34")
-- EXECUTION TIME:
0.134088
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:09:20) 
-- CODE:
round("250/6")
print("12.34")
-- EXECUTION TIME:
0.225419
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:09:20) 
-- CODE:
round("250/6")
print("12.34")
-- EXECUTION TIME:
0.137436
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:09:21) 
-- CODE:
round("250/6")
print("12.34")
-- EXECUTION TIME:
0.107175
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:09:21) 
-- CODE:
round("250/6")
print("12.34")
-- EXECUTION TIME:
0.130166
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:09:21) 
-- CODE:
round("250/6")
print("12.34")
-- EXECUTION TIME:
0.108678
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:09:22) 
-- CODE:
round("250/6")
print("12.34")
-- EXECUTION TIME:
0.199609
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:09:22) 
-- CODE:
round("250/6")
print("12.34")
-- EXECUTION TIME:
0.1219
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:09:22) 
-- CODE:
round("250/6")
print("12.34")
-- EXECUTION TIME:
0.102131
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:09:22) 
-- CODE:
round("250/6")
print("12.34")
-- EXECUTION TIME:
0.159455
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:09:22) 
-- CODE:
round("250/6")
print("12.34")
-- EXECUTION TIME:
0.107859
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:09:23) 
-- CODE:
round("250/6")
print("12.34")
-- EXECUTION TIME:
0.113356
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:09:23) 
-- CODE:
round("250/6")
print("12.34")
-- EXECUTION TIME:
0.157897
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:09:24) 
-- CODE:
round("250/6")
print("12.34")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:11:11) 
-- CODE:
round("250/6")
print("41,67")
-- EXECUTION TIME:
0.160651
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:11:12) 
-- CODE:
round("250/6")
print("41,67")
-- EXECUTION TIME:
0.134162
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:11:23) 
-- CODE:
round("250/6")
print("41,677")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:11:23) 
-- CODE:
round("250/6")
print("41,677")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:11:24) 
-- CODE:
round("250/6")
print("41,677")
-- EXECUTION TIME:
0.183392
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:11:24) 
-- CODE:
round("250/6")
print("41,677")
-- EXECUTION TIME:
0.15347
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:57:10) 
-- CODE:
round("250/6")
print("41.677")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("250/6")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:01:02) 
-- CODE:
a=6
c=250
racha= c/a
print(racha)
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(x,2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:01:19) 
-- CODE:
a=6
c=250
racha= c/a
print(racha)
round(x, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(x, 2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:01:45) 
-- CODE:
a=6
c=250
racha= c/a
print(racha)
round(racha,2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:01:54) 
-- CODE:
a=6
c=250
racha= c/a
print(racha)
round(racha,2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:04) 
-- CODE:
a=6
c=250
racha= c/a
print(racha)
round(racha,2)
-- EXECUTION TIME:
0.194531
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:02:07) 
-- CODE:
a=6
c=250
racha= c/a
print(racha)
round(racha,2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:12) 
-- CODE:
a=6
c=250
racha= c/a
print(racha)
round(racha,2)
-- EXECUTION TIME:
0.193504
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:26) 
-- CODE:
a=6
c=250
racha= c/a
print(racha)
round(racha,2)
-- EXECUTION TIME:
0.146409
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:02:34) 
-- CODE:
a=6
c=250
racha= c/a
print(racha)
round(racha,2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:03:30) 
-- CODE:
a=6
c=250
racha=c/a
round(x,2)
print(racha)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(x,2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:03:33) 
-- CODE:
a=6
c=250
racha=c/a
round(x,2)
print(racha)

-- EXECUTION TIME:
0.141728
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 4, in <module>
    round(x,2)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:05:01) 
-- CODE:
a=6
c=250
racha=c/a
print(round(racha,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:05:04) 
-- CODE:
a=6
c=250
racha=c/a
print(round(racha,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:05:05) 
-- CODE:
a=6
c=250
racha=c/a
print(round(racha,2))
-- EXECUTION TIME:
0.185922
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
